--- a/protected.html
+++ b/protected.html
@@ -124,6 +124,14 @@
             justify-content: center;
             align-items: center;
         }
+        .wersaol-image {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            display: none;
+            width: 500px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -134,6 +142,8 @@
         <video id="video2"><source src="video2.mp4" type="video/mp4"></video>
         <video id="error"><source src="error.mp4" type="video/mp4"></video>
     </div>
+
+    <img id="wersaolImage" class="wersaol-image" src="sprites/wersaol.png" alt="Wersaol Image">
 
     <div class="input-container">
         <input type="text" id="passwordInput" placeholder=" " aria-label="Enter password">
@@ -181,7 +191,31 @@
             } else if (password === "yoki0309") {
                 window.open("https://drive.google.com/file/d/18eNiNEZyxkKZBawNvZxNzmxMenFenAjf/view?usp=sharing", "_blank");
 
+            } else if (password === "yarik") {
+                window.open("https://www.youtube.com/watch?v=wO61D9x6lNY", "_blank");
+            } else if (password === "kruhliassh") {
+                window.open("https://www.youtube.com/watch?v=wO61D9x6lNY", "_blank");
 
+            } else if (password === "iceberg") {
+                window.open("https://www.youtube.com/watch?v=naglrNWbU6Q", "_blank");
+
+            } else if (password === "wersaol") {
+                document.getElementById("wersaolImage").style.display = "block";
+
+            } else if (password === "inlovveer") {
+                window.open("https://www.youtube.com/watch?v=uYeLh-8GDTw", "_blank");
+
+            } else if (password === "wersaol") {
+                window.open("", "_blank");
+
+            } else if (password === "hide and seek") {
+                window.open("https://docs.google.com/spreadsheets/d/1vvjPDOhTQTFJ2Wk72SZqDUUodqHTOhzP1R2NtlRMjnM/edit?usp=sharing", "_blank");
+            } else if (password === "pryatki") {
+                window.open("https://docs.google.com/spreadsheets/d/1vvjPDOhTQTFJ2Wk72SZqDUUodqHTOhzP1R2NtlRMjnM/edit?usp=sharing", "_blank");
+            } else if (password === "hide&seek") {
+                window.open("https://docs.google.com/spreadsheets/d/1vvjPDOhTQTFJ2Wk72SZqDUUodqHTOhzP1R2NtlRMjnM/edit?usp=sharing", "_blank");
+            } else if (password === "hide & seek") {
+                window.open("https://docs.google.com/spreadsheets/d/1vvjPDOhTQTFJ2Wk72SZqDUUodqHTOhzP1R2NtlRMjnM/edit?usp=sharing", "_blank");
 
             } else if (password === "hilbert") {
                 document.getElementById("video1").style.display = "block";
