--- a/protected.html
+++ b/protected.html
@@ -141,6 +141,7 @@
         <video id="video1"><source src="video1.mp4" type="video/mp4"></video>
         <video id="video2"><source src="video2.mp4" type="video/mp4"></video>
         <video id="error"><source src="error.mp4" type="video/mp4"></video>
+        <video id="correct"><source src="correct.mp4" type="video/mp4"></video>
     </div>
 
     <img id="wersaolImage" class="wersaol-image" src="sprites/wersaol.png" alt="Wersaol Image">
@@ -166,7 +167,7 @@
 
         function checkPassword() {
             var password = document.getElementById("passwordInput").value;
-            var videos = ["video1", "video2", "video3", "video4", "error"];
+            var videos = ["video1", "video2", "video3", "video4", "correct", "error"];
             videos.forEach(id => {
                 var vid = document.getElementById(id);
                 vid.pause();
@@ -192,9 +193,9 @@
                 window.open("https://drive.google.com/file/d/18eNiNEZyxkKZBawNvZxNzmxMenFenAjf/view?usp=sharing", "_blank");
 
             } else if (password === "yarik") {
-                window.open("https://www.youtube.com/watch?v=wO61D9x6lNY", "_blank");
+                window.open("https://www.youtube.com/watch?v=JkygpFVNZQc&t=227s", "_blank");
             } else if (password === "kruhliassh") {
-                window.open("https://www.youtube.com/watch?v=wO61D9x6lNY", "_blank");
+                window.open("https://www.youtube.com/watch?v=JkygpFVNZQc&t=227s", "_blank");
 
             } else if (password === "iceberg") {
                 window.open("https://www.youtube.com/watch?v=naglrNWbU6Q", "_blank");
@@ -205,8 +206,86 @@
             } else if (password === "inlovveer") {
                 window.open("https://www.youtube.com/watch?v=uYeLh-8GDTw", "_blank");
 
-            } else if (password === "wersaol") {
-                window.open("", "_blank");
+            } else if (password === "m") {
+                window.open("https://www.youtube.com/watch?v=yiqEEL7ac6M", "_blank");
+
+            } else if (password === "n") {
+                window.close();
+
+            } else if (password === "barny") {
+                window.open("https://www.youtube.com/watch?v=ZGdyCin1lyI", "_blank");
+            } else if (password === "phoenix") {
+                window.open("https://www.youtube.com/watch?v=ZGdyCin1lyI", "_blank");
+
+            } else if (password === "pogoda") {
+                window.open("https://ukraine-gta.com.ua/uk/", "_blank");
+            } else if (password === "pogoda__") {
+                window.open("https://ukraine-gta.com.ua/uk/", "_blank");
+
+            } else if (password === "firel") {
+                window.open("https://five-nights-at-freddys-ar.ru.uptodown.com/android", "_blank");
+
+            } else if (password === "yaki") {
+                window.open("https://id.wikipedia.org/wiki/Yaki", "_blank");
+
+            } else if (password === "extremism") {
+                window.open("https://t.me/IWantWar", "_blank");
+            } else if (password === "extrem1sm") {
+                window.open("https://t.me/IWantWar", "_blank");
+
+            } else if (password === "arthur") {
+                window.open("https://store.steampowered.com/app/250900/The_Binding_of_Isaac_Rebirth/", "_blank");
+            } else if (password === "therattrap") {
+                window.open("https://store.steampowered.com/app/250900/The_Binding_of_Isaac_Rebirth/", "_blank");
+            } else if (password === "rattrap") {
+                window.open("https://store.steampowered.com/app/250900/The_Binding_of_Isaac_Rebirth/", "_blank");
+            } else if (password === "therattrap__") {
+                window.open("https://store.steampowered.com/app/250900/The_Binding_of_Isaac_Rebirth/", "_blank");
+
+            } else if (password === "prostofel") {
+                window.open("https://rezka-ua.org/animation/thriller/28488-angel-krovoprolitiya-2018.html", "_blank");
+            } else if (password === "fel") {
+                window.open("https://rezka-ua.org/animation/thriller/28488-angel-krovoprolitiya-2018.html", "_blank");
+            } else if (password === "feliks") {
+                window.open("https://rezka-ua.org/animation/thriller/28488-angel-krovoprolitiya-2018.html", "_blank");
+
+            } else if (password === "mariztq") {
+                window.open("https://www.youtube.com/watch?v=nsXwi67WgOo", "_blank");
+            } else if (password === "masha") {
+                window.open("https://www.youtube.com/watch?v=nsXwi67WgOo", "_blank");
+
+            } else if (password === "jeely_drone") {
+                window.open("https://imgur.com/a/QgSjQL6", "_blank");
+            } else if (password === "maksim") {
+                window.open("https://imgur.com/a/QgSjQL6", "_blank");
+
+            } else if (password === "tomato") {
+                window.open("https://www.youtube.com/watch?v=U24Zez6J950", "_blank");
+            } else if (password === "priv") {
+                window.open("https://www.youtube.com/watch?v=U24Zez6J950", "_blank");
+            } else if (password === ":priv:") {
+                window.open("https://www.youtube.com/watch?v=U24Zez6J950", "_blank");
+
+            } else if (password === "je3ns") {
+                window.open("https://www.youtube.com/watch?v=L42FaQhlZdo", "_blank");
+            } else if (password === "awalking") {
+                window.open("https://www.youtube.com/watch?v=L42FaQhlZdo", "_blank");
+            } else if (password === "awalking_") {
+                window.open("https://www.youtube.com/watch?v=L42FaQhlZdo", "_blank");
+            } else if (password === "nazar") {
+                window.open("https://www.youtube.com/watch?v=L42FaQhlZdo", "_blank");
+
+            } else if (password === "cherurapoop") {
+                window.open("https://www.youtube.com/watch?v=fDRrqJU4-Tk", "_blank");
+            } else if (password === "cherurapup") {
+                window.open("https://www.youtube.com/watch?v=fDRrqJU4-Tk", "_blank");
+            } else if (password === "cherurapoop 4") {
+                window.open("https://www.youtube.com/watch?v=fDRrqJU4-Tk", "_blank");
+            } else if (password === "cherurapup 4") {
+                window.open("https://www.youtube.com/watch?v=fDRrqJU4-Tk", "_blank");
+
+            } else if (password === "aternos") {
+                window.open("https://www.google.com/search?sca_esv=0fa8021822713b50&sxsrf=AHTn8zpihK5iGsaODphmRbrrRxf0UESPbQ:1741899407169&q=%D0%BA%D0%B0%D1%80%D1%82%D0%BE%D1%88%D0%BA%D0%B0&udm=2&fbs=ABzOT_BHsRYinqnEBGAlBm2FKtbMkyDIc7tcvlyEgS2PPdYuXBSmnlefmCWSL3wZo1GGdHZwsOjV7H6FURxZrmmCbbguiaEFFpT1WLhBSWvxThBi7JorlGgB276qDgEU5dIGKaLR381XaS-Tt9sZpEw_kZIQmCCF5JjfFN2yaO4ANSuoAM9dXwT1YllA1zBHtCL36-0-yKFNXRTCcweKNS8k9e6I7CPTB0In6iIxD5WKMSslArReH0kCC7o8St-xm9oAtmrSh6JB&sa=X&ved=2ahUKEwiej5j7-IeMAxXXHxAIHXb3JjcQtKgLegQIDRAB&biw=1920&bih=953&dpr=1#vhid=V7mZGPenrv-W-M&vssid=mosaic", "_blank");
 
             } else if (password === "hide and seek") {
                 window.open("https://docs.google.com/spreadsheets/d/1vvjPDOhTQTFJ2Wk72SZqDUUodqHTOhzP1R2NtlRMjnM/edit?usp=sharing", "_blank");
@@ -220,6 +299,14 @@
             } else if (password === "hilbert") {
                 document.getElementById("video1").style.display = "block";
                 document.getElementById("video1").play();
+
+            } else if (password === "x") {
+                document.getElementById("correct").style.display = "block";
+                document.getElementById("correct").play();
+            } else if (password === "red x") {
+                document.getElementById("correct").style.display = "block";
+                document.getElementById("correct").play();
+
             } else {
                 document.getElementById("error").style.display = "block";
                 document.getElementById("error").play();
@@ -238,9 +325,10 @@
         document.getElementById("video1").addEventListener("ended", () => switchToVideo3());
         document.getElementById("video2").addEventListener("ended", () => switchToVideo3());
         document.getElementById("error").addEventListener("ended", () => switchToVideo3());
+        document.getElementById("correct").addEventListener("ended", () => switchToVideo3());
 
         function switchToVideo3() {
-            var videos = ["video1", "video2", "video4", "error"];
+            var videos = ["video1", "video2", "video4", "correct", "error"];
             videos.forEach(id => document.getElementById(id).style.display = "none");
             document.getElementById("video3").style.display = "block";
             document.getElementById("video3").play();
