--- a/protected.html
+++ b/protected.html
@@ -210,7 +210,7 @@
                 window.open("https://www.youtube.com/watch?v=yiqEEL7ac6M", "_blank");
 
             } else if (password === "n") {
-                window.close();
+                this.close()
 
             } else if (password === "barny") {
                 window.open("https://www.youtube.com/watch?v=ZGdyCin1lyI", "_blank");
