--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
 
     <div id="image-container">
-        <img id="clickable-image" src="sprites/room.png" alt=" " title=" ">
+        <img id="clickable-image" src="sprites/room1.png" alt=" " title=" ">
         <div id="text-overlay" style="font-family:MV Boli"></div>
         <div id="drop-zone">
             <p> </p>
@@ -181,3 +181,4 @@
 
 </body>
 </html>
+
